# resume-builder

./: agents.md  implementation_plan_exported.md  instructions.md  memory.md  package-lock.json  package.json  prd.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build_check.ps1  build_test.ps1  tauri.conf.json
src-tauri/resources/: .gitignore
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: commands.rs  mod.rs  models.rs
src-tauri/src/latex/: commands.rs  download.rs  mod.rs  template.rs  tests.rs
src-tauri/src/llm/: commands.rs  mod.rs  prompt.rs
src-tauri/src/rag/: commands.rs  mod.rs
src/components/: Layout.tsx
src/lib/: tauri.ts
src/pages/: ArchetypesPage.tsx  BioPage.tsx  ExperiencesPage.tsx  GeneratePage.tsx  LatexPage.tsx  OnboardingPage.tsx  SettingsPage.tsx
