[package]
name = "resume-builder"
version = "0.1.0"
description = "Resume & Cover Letter Manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resume_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
ndarray = "0.17"

